# cfa-azuretools

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: pre-commit.yaml  test.yaml  test.yml  website.yaml
azuretools/: auth.py  autoscale.py  blob.py  client.py  config.py  defaults.py  endpoint.py  job.py  resourcelookup.py  task.py  util.py  validate.py
docs/source/: conf.py  index.md
test/: test_autoscale.py  test_blob.py  test_config.py  test_task.py  test_validate.py
