[project]
name = "azuretools"
version = "0.1.0"
description = "Tools for interacting with Azure resources from the CFA VAP, with a focus on short-term forecasting using batch"
authors = [{ name = "Dylan H. Morris", email = "dzl1@cdc.gov" }]
requires-python = "~=3.12"
readme = "README.md"
license = "Apache 2.0 License"
dependencies = [
    "toml>=0.10.2,<0.11",
    "azure-mgmt-batch>=18.0.0,<19",
    "azure-storage-blob>=12.23.1,<13",
    "azure-identity>=1.18.0,<2",
    "msrest>=0.7.1,<0.8",
    "msrestazure>=0.6.4.post1,<0.7",
    "azure-keyvault>=4.2.0,<5",
    "azure-mgmt-compute>=33.0.0,<34",
    "azure-batch>=14.2.0,<15",
    "sphinx-autoapi>=3.3.3,<4",
]

[dependency-groups]
docs = [
    "sphinx>=8.0.2,<9",
    "pydata-sphinx-theme>=0.15.4,<0.16",
    "myst-parser>=4.0.0,<5",
    "polars>=1.12.0,<2",
]
test = ["pytest>=8.3.3,<9"]

[tool.uv]
default-groups = [
    "docs",
    "test",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.numpydoc_validation]
checks = [
    "all",   # report on all checks, except the below
    "EX01",  # do not require examples
    "SA01",  # do not require see also
    "SS06",  # do not require summaries to be a single line
    "PR04",  # do not require types in docstrings, since we defer to typehints
    "ES01",  # do not require extended summary
]
